<resources>
    <string name="app_name">Shopping list</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Shopping list app</string>
    <string name="teststring">Ready to go shopping? Lets go!</string>
    <string name="showToast">Hej Lars</string>
    <string name="showToast2">Button 2</string>
    <string name="hint">Product</string>
    <string name="hint2">Detailed description</string>
    <string name="addToList">Add to list</string>
    <string name="deleteList">Clear list</string>
    <string name="quantityshop">Quantity</string>
    <string name="settingstext">From here you can change the settings</string>
</resources>
