<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lars.blankactivity.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@+id/teststring"
            android:text="@string/hello_world"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/teststring"
            android:text="Ready to go shopping? Lets go!"
            android:layout_marginLeft="10dp" />




        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"
            android:id="@+id/addToList"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint2"
            android:inputType="text"
            android:id="@+id/comment"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/quantity"
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:hint="@string/quantityshop"
            android:inputType="phone" />
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/addToList"
            android:layout_marginLeft="45dp"
            android:onClick="addToList"/>
    </LinearLayout>



        <ListView
            android:id="@+id/textListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="#CCCCCC"
            android:dividerHeight="1dp"
            android:paddingLeft="2dp"
            android:clickable="true"
            android:focusable="true"
            android:listSelector="@color/authui_colorPrimary">

        </ListView>
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
</RelativeLayout>
